--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -33,7 +33,7 @@ jobs:
               env:
                   CYTHON_BUILD_IN_SOURCE: 'true'  # see setup.py. Avoids a bug when building with multiple python variants
 
-            - name: Convert linux builds to mac and winsows
+            - name: Convert linux builds to mac and windows
               run: |
                   export PATH="$HOME/miniconda/bin:$PATH"
                   conda convert -f -p linux-aarch64 linux-64/*.tar.bz2
@@ -103,7 +103,7 @@ jobs:
             #       PythonVersions="2.7 3.6 3.7 3.8 3.9"
             #       for PythonVersion in $PythonVersions
             #       do
-            #           conda create --name env-${PythonVersion} -c s-ameli python=${PythonVersion} traceinv pytest-cov -y
+            #           conda create --name env-${PythonVersion} -c s-ameli python=${PythonVersion} imate pytest-cov -y
             #           conda activate env-${PythonVersion}
             #           pytest
             #           conda deactivate
@@ -120,7 +120,7 @@ jobs:
               # run: |
                   # conda config --set channel_priority strict
                   # conda install -c conda-forge pytest pytest-cov -y
-                  # conda install -c conda-forge -c s-ameli traceinv -y
+                  # conda install -c conda-forge -c s-ameli imate -y
                   # conda init
 
             - name: Checkout
@@ -131,7 +131,7 @@ jobs:
               run: |
                   mv imate imate-DoNotImport
                   rm setup.cfg
-                  conda install -c s-ameli traceinv -y
+                  conda install -c s-ameli imate -y
                   conda install pytest -y
                   pytest
 
@@ -150,7 +150,7 @@ jobs:
             #       {
             #           conda create --name env-$PythonVersion -c s-ameli python=$PythonVersion pytest-cov -y
             #           conda activate env-$PythonVersion
-            #           conda install -c s-ameli traceinv -y
+            #           conda install -c s-ameli imate -y
             #           pytest-cov
             #           conda deactivate
             #           conda remove --name env-$PythonVersion --all -y
