--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -26,7 +26,7 @@ jobs:
               with:
                   python-version: ${{ matrix.python-version }}
 
-            - name: Install prerequisits
+            - name: Install prerequisites
               run: |
                   sudo apt-get update
                   sudo apt-get install libsuitesparse-dev
