--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -26,7 +26,7 @@ jobs:
               with:
                   python-version: ${{ matrix.python-version }}
 
-            - name: Install prerequisits
+            - name: Install prerequisites
               run: |
                   brew install suite-sparse
                   brew install libomp
