--- a/.github/workflows/deploy-conda3.yml
+++ b/.github/workflows/deploy-conda3.yml
@@ -36,7 +36,7 @@ jobs:
                   export PATH=$(conda info --root)/bin:$PATH
                   conda-build --output-folder . .
               env:
-                  CYTHON_BUILD_IN_SOURCE: 'true'  # see setup.py. Avoids a bug when building with multiple python variants
+                  CYTHON_BUILD_IN_SOURCE: '0'  # see setup.py. Avoids a bug when building with multiple python variants
                   ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
 
     # On MacOS, package is built from wheels, not directly from the source code
@@ -85,7 +85,7 @@ jobs:
     #               conda config --set anaconda_upload yes
     #               conda-build --output-folder . .
     #           env:
-    #               CYTHON_BUILD_IN_SOURCE: 'true'  # see setup.py. Avoids a bug when building with multiple python variants
+    #               CYTHON_BUILD_IN_SOURCE: '1'  # see setup.py. Avoids a bug when building with multiple python variants
     #               ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
     #
     #         # - name: Upload to Anaconda Cloud
