--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -12,7 +12,8 @@ build:
     number: 0
     script: 
         - {{ PYTHON }} -m pip install dist/*.whl -vvv  # [osx]
-        - {{ PYTHON }} -m pip install . -vv  # [not osx]
+        - {{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv  # [not osx]
+        # - {{ PYTHON }} setup.py install  # [not osx]
         # - {{ PYTHON }} -m pip install . --single-version-externally-managed --record=record.txt -vvv  # [not osx]
         # - {{ PYTHON }} -m pip install . --single-version-externally-managed --record=record.txt --ignore-installed --no-cache-dir -vvv  # [not osx]
     # script: sh ./build_macos.sh     # [mac]
@@ -30,8 +31,8 @@ requirements:
         - llvm-openmp  # [osx]
 
     host:
-        # - python {{ python }}
-        - python
+        - python {{ python }}
+        # - python
         - setuptools
         - numpy>1.11
         - scipy>=1.5
@@ -39,8 +40,8 @@ requirements:
         - pip
         - llvm-openmp  # [osx]
     run:
-        # - python {{ python }}
-        - python
+        - python {{ python }}
+        # - python
         - numpy>1.11
         # - {{ pin_compatible('numpy') }}
         - scipy>=1.5
