--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -11,8 +11,9 @@ source:
 build:
     number: 0
     script: 
-        - {{ PYTHON }} -m pip install dist/*.whl -vvv  # [osx]
-        - {{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv  # [not osx]
+        - {{ PYTHON }} -m pip install dist/*.whl --no-deps -vvv
+        # - {{ PYTHON }} -m pip install dist/*.whl -vvv  # [osx]
+        # - {{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv  # [not osx]
         # - {{ PYTHON }} setup.py install  # [not osx]
         # - {{ PYTHON }} -m pip install . --single-version-externally-managed --record=record.txt -vvv  # [not osx]
         # - {{ PYTHON }} -m pip install . --single-version-externally-managed --record=record.txt --ignore-installed --no-cache-dir -vvv  # [not osx]
