conda based on wheel 2

--- a/.github/workflows/deploy-conda4.yml
+++ b/.github/workflows/deploy-conda4.yml
@@ -146,7 +146,8 @@ jobs:
 
     test_conda:
         # needs: [build_upload_conda_for_linux_windows, build_upload_conda_for_mac]
-        needs: [build_upload_conda_for_linux_windows]
+        # needs: [build_upload_conda_for_linux_windows]
+        needs: [build_conda]
         name: Test on ${{ matrix.os }} and Python ${{ matrix.python-version }}
         runs-on: ${{ matrix.os }}
         strategy:
