cu_linear_operator.test bug fix

--- a/.github/workflows/deploy-conda4.yml
+++ b/.github/workflows/deploy-conda4.yml
@@ -9,16 +9,15 @@ on:
             - published
 
 jobs:
-    # On linux and windows, package is built directly from the source code
-    # build_upload_conda_for_linux_windows:
     build_wheels:
-        name: Build on ${{ matrix.os }}
+        name: Build wheels on ${{ matrix.os }}
         runs-on: ${{ matrix.os }}
         strategy:
             fail-fast: false
             matrix:
-                # os: [ubuntu-latest, windows-latest]
-                os: [ubuntu-latest]
+                # os: [ubuntu-latest, windows-latest, macos-latest]
+                os: [ubuntu-latest, macos-latest]
+                
         steps:
             - name: Checkout
               uses: actions/checkout@v2
@@ -35,6 +34,70 @@ jobs:
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
 
+            - name: Install OpenMP and numpy for mac
+              if: runner.os == 'macos'
+              run: |
+                  brew install libomp
+
+                  # This is needed to import numpy in pypy3 (but not needed for
+                  # pypy2 and CPython)
+                  # brew install openblas
+                  # OPENBLAS="$(brew --prefix openblas)"
+                  # brew install lapack
+                  # pip3 install numpy
+
+            # To install CUDA in windows, uncomment the following lines. Note
+            # that the Jimver@cuda-toolkit action (below) can only install cuda
+            # on linux and windows, but not macos. Also, for linux, we should
+            # not install cuda here, rather it should be installed inside the
+            # manylinux docker image. Thus, the following Jimver action can
+            # only apply to windows, not linux and macos. To install cuda in
+            # linux, see the second next actions below "Build wheel with cuda
+            # support".
+            - name: Install CUDA
+              if: matrix.os == 'windows-latest'
+              uses: Jimver/cuda-toolkit@v0.2.1
+              id: cuda-toolkit
+              with:
+                  cuda: '11.2.2'
+
+            # Build wheel for windows with CUDA enabled. Note that cibuildwheel
+            # does not need manylinux docker, thuns, CUDA can be installed in
+            # the github action's virtual machine using the Jimver's action
+            # in the previous action (see above).
+            - name: Build wheels in windows with CUDA support
+              if: matrix.os == 'windows-latest'
+              run: python -m cibuildwheel --output-dir wheelhouse
+              env:
+                  CIBW_BUILD: "*-manylinux_x86_64 *-macosx_x86_64 *-win_amd64"
+                  CIBW_SKIP: "pp* cp27-* cp35-*"
+                  CIBW_BUILD_VERBOSITY: 1
+                  CIBW_ENVIRONMENT: "USE_CUDA=1"
+           
+            # Do not enable compiling with CUDA for macos since NIVDIA no
+            # longer supports CUDA in the macos.
+            - name: Build wheels in mac without CUDA support
+              if: matrix.os == 'macos-latest'
+              run: python -m cibuildwheel --output-dir wheelhouse
+              env:
+                  CIBW_BUILD: "*-manylinux_x86_64 *-macosx_x86_64 *-win_amd64"
+                  CIBW_SKIP: "pp* cp27-* cp35-*"
+                  CIBW_BUILD_VERBOSITY: 1
+                  CIBW_ENVIRONMENT: "USE_CUDA=0"
+
+            # Enable compiling with CUDA, only for linux. Note that cuda must
+            # be installed "inside" the manylinux docker image, not in the main
+            # github virtual machine. Also, we should use manylinux2014, but
+            # not manylinux1. Because of this, we will not install CUDA with
+            # the Jimver's action (unlike we did so for the windows wheel in
+            # the above). The ``CUDA_DYNAMIC_LOADING=1`` enables dynamic
+            # loading of CUDA library. Base of this, when the wheels are
+            # created in manylinux platform, the cuda's libraries
+            # (libcudart.so, libcublas.so, libcusparse.so) will NOT bundle to
+            # the wheel. This is very good since the size of the wheel does not
+            # increase (cuda libs are large), and the  manylinux wheel can be
+            # uploaded to pypi (pypi has 100MB upload limit). On the down side,
+            # the user has to install cuda library themselves.
             - name: Build wheels in linux with CUDA support
               if: matrix.os == 'ubuntu-latest'
               run: python -m cibuildwheel --output-dir wheelhouse
@@ -53,8 +116,13 @@ jobs:
 
     build_conda:
         needs: [build_wheels]
-        runs-on: ubuntu-latest
-        name: Build conda
+        name: Build conda on ${{ matrix.os }}
+        runs-on: ${{ matrix.os }}
+        strategy:
+            fail-fast: false
+            matrix:
+                # os: [ubuntu-latest, windows-latest, macos-latest]
+                os: [ubuntu-latest, macos-latest]
         
         # To upload to PyPI on every tag starting with 'v', use the following:
         # if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
@@ -75,7 +143,6 @@ jobs:
             - name: Build and upload package
               shell: bash -l {0}
               run: |
-                  ls
                   ls dist
                   conda install -y conda-build anaconda-client
                   conda config --set anaconda_upload yes
@@ -156,10 +223,7 @@ jobs:
             fail-fast: false
             matrix:
                 # os: [ubuntu-latest, windows-latest, macos-latest]
-                # os: [ubuntu-latest, windows-latest]
-                os: [ubuntu-latest]
-                # python-version: [2.7, 3.6, 3.7, 3.8, 3.9]
-                # python-version: [3.9]
+                os: [ubuntu-latest, macos-latest]
                 python-version: [3.6, 3.7, 3.8, 3.9]
 
         steps:
