conda-recipe linux

--- a/.github/workflows/deploy-conda4.yml
+++ b/.github/workflows/deploy-conda4.yml
@@ -16,7 +16,8 @@ jobs:
             fail-fast: false
             matrix:
                 # os: [ubuntu-latest, windows-latest, macos-latest]
-                os: [ubuntu-latest, macos-latest]
+                # os: [ubuntu-latest, macos-latest]
+                os: [ubuntu-latest]
                 
         steps:
             - name: Checkout
@@ -122,7 +123,8 @@ jobs:
             fail-fast: false
             matrix:
                 # os: [ubuntu-latest, windows-latest, macos-latest]
-                os: [ubuntu-latest, macos-latest]
+                # os: [ubuntu-latest, macos-latest]
+                os: [ubuntu-latest]
         
         # To upload to PyPI on every tag starting with 'v', use the following:
         # if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
@@ -148,7 +150,8 @@ jobs:
                   conda config --set anaconda_upload yes
                   export PATH=$(conda info --root):$PATH
                   export PATH=$(conda info --root)/bin:$PATH
-                  conda-build --output-folder . .
+                  # conda-build --output-folder . .
+                  conda-build --output-folder . conda-recipe
               env:
                   CYTHON_BUILD_IN_SOURCE: '0'  # see setup.py. Avoids a bug when building with multiple python variants
                   ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
@@ -223,7 +226,8 @@ jobs:
             fail-fast: false
             matrix:
                 # os: [ubuntu-latest, windows-latest, macos-latest]
-                os: [ubuntu-latest, macos-latest]
+                # os: [ubuntu-latest, macos-latest]
+                os: [ubuntu-latest]
                 python-version: [3.6, 3.7, 3.8, 3.9]
 
         steps:
