adding except, passng 2>nul

--- a/.github/workflows/deploy-conda4.yml
+++ b/.github/workflows/deploy-conda4.yml
@@ -149,6 +149,7 @@ jobs:
               shell: bash -l {0}
               run: |
                   ls
+                  ls dist
                   conda install -y conda-build anaconda-client
                   conda config --set anaconda_upload yes
                   export PATH=$(conda info --root):$PATH
