conda build in source

--- a/.github/workflows/deploy-conda3.yml
+++ b/.github/workflows/deploy-conda3.yml
@@ -1,9 +1,9 @@
 name: deploy-conda-3
 
 on:
-    push:
-        # branches:
-        #     - main
+    # push:
+    #     branches:
+    #         - main
     release:
         types: 
             - published
